feat: expose the endpoints to manage closures
Refs: #33
